significant changes move to one-file format